# eld-backend

./: .dockerignore  .env.example  .gitignore  Dev.md  Dockerfile  README.md  build_files.sh  dumpdb.json  memory.md  pyproject.toml  requirements.txt  vercel.json
config/: settings.py  urls.py
eld/: apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
eld/management/: __init__.py
eld/management/commands/: __init__.py  seed_db.py
logsheet/: apps.py  models.py  serializers.py
stops/: apps.py  models.py  serializers.py
trip/: models.py  serializers.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: seed_users.py
utils/: helpers.py
